# rafaello

./: Cargo.toml
rafaello-test/: Cargo.toml
rafaello-test/src/: main.rs
rafaello-types/: Cargo.toml
rafaello-types/src/: lib.rs
src/: implementations.rs  lib.rs
