[package]
name = "rafaello"
description = "A wrapper for creating TUI-applications with ratatui."
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["proc-macro"]

[dependencies]
darling = "0.21.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
ratatui = "0.29.0"
syn = { version = "2.0.104", features = ["full"] }
